# conan-littlecms

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  test.c
